# candil

./: README.md  docker-compose.yml  on-change-sub.json  periodic-sub.json
containerlab/: deploy-testbed-srl-xe-lab.sh  r1-config.cli  r2-config.txt  telemetry-testbed-srl-xe.yaml
docs/: .htaccess  index-en.html  index.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl
docs/provenance/: provenance-en.html
docs/sections/: abstract-en.html  crossref-en.html  description-en.html  introduction-en.html  overview-en.html
gnmic/: gnmic.yaml
mappings/containerlab/: config.ini  containerlab-mapping.yaml  topology-data.json
mappings/gnmi/: gnmi-mapping-kafka.ttl  gnmi-mapping.ttl  gnmic-oper-status-event-mapping.yaml  gnmic-oper-status-event-rml.ttl  gnmic-oper-status-event.json
mappings/yang-push/: netconf-mapping.ttl  netconf-mapping.yaml
morph-kgc/: Dockerfile  knowledge-graph.nt  pyproject.toml
morph-kgc/files/: config.ini  mapping_file.rml.ttl
morph-kgc/helm/: Chart.yaml  values.yaml
ncclient-collector/: Dockerfile  pyproject.toml
ncclient-collector/ncclient_collector/: csr-create-periodic-subscription-interfaces-state-kafka.py
ontology/: ontology.owl  ontology.ttl
performance/: docker-compose-performance.yml  docker-compose-streamer.yml  results-plot.py
performance/rdf-generator/: Dockerfile  pyproject.toml
performance/rdf-generator/rdf_generator/: generator.py
rdf-to-ngsi-ld/: Dockerfile  pyproject.toml
rdf-to-ngsi-ld/rdf_to_ngsi_ld/: materialize.py  translator.py
testserver/: dockerfile  testserver.py
(+23 files in other folders)
