[tool.poetry]
name = "rdf-generator"
version = "0.1.0"
description = ""
authors = ["Ignacio Dominguez Martinez-Casanueva <ignacio.dominguezmartinez@telefonica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyoxigraph = "^0.3.22"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
